Initial commit - WeatherApp project

--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -61,7 +61,8 @@
                 android:textColor="@color/textColor"
                 android:textColorHint="@color/textHintColor"
                 android:textCursorDrawable="@null"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageView
                 android:id="@+id/search_bar_iv"
